# AutoML

./: .gitignore  AutoML.py  FuncLib.py  IKBENHIER!.csv  LICENSE  README.md  SelfTrainingML.py  __dataset_explorer_template.html  __test.py  _automl.py  automl.py  dataset_explorer_full.html  dataset_explorer_template.html  eda_report.html  plots_report.html  pyproject.toml  requirements.txt  summary_styled.html  test.html  test.py
AutoML_EDA/: AutoML_EDA.py  AutoML_EDA_overview.py  __init__.py
AutoML_GUI/: AutoML_GUI.py  __init__.py
AutoML_Libs/: FuncLib.py  __init__.py  htmlLib.py
Documentation/: eda_stappenplan.md  🔍 1.docx
_automl_eda/: automl_eda.py  automl_eda_overview.py
_automl_gui/: automl_gui.py
_automl_libs/: definitions.py  htm_lib.py
_docs/: eda_plan.md
_templates/: eda_report.html
automl/: __init__.py  automl.py  automl_main.py
automl/dataloader/: __init__.py  dataloader_script.py
automl/docs/: prepro_func.md
automl/eda/: __init__.py  column_analysis.py  dataset_overview.py  eda.py  eda_report.py  eda_script.py  missing.py  overview.py  plots.py  relations.py  target_relations.py  testdata.py
automl/gui/: __init__.py  gui.py
automl/jinja/: feature_tables.j2  missing_info.j2  relations.j2  report_main.j2  sample_data.j2  table_from_dict.j2  target_relations.j2  test_info.j2
automl/modelling/: __init__.py  hypertuning.py  model_plot.py  modelling.py  (+5 more)
automl_eda/: __init__.py  automl_eda.py  automl_eda_overview.py  automl_missing.py  automl_testdata.py
automl_gui/: __init__.py  automl_gui.py
automl_libs/: __init__.py  feature_lib.py  general_lib.py  html_lib.py
docs/: eda_overview.md  preprocessing.md
templates/: EDA_report.html  eda_report.html  eda_report.j2  features.html  features.j2  missing.html  missing.j2  overview_table.html  overview_table.j2  recommendations.j2  relations.html  relations.j2  target.html  testdata.j2
(+27 files in other folders)
