[project]
name = "automl"
version = "0.1.0"
description = "automated machine learning framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "torch",
    "torchvision",
    "torchaudio",
    "wxpython>=4.2.3",
    "xgboost>=3.0.4",
    "ruff>=0.12.10",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "devtools>=0.12.2",
]

[tool.ruff.lint]
ignore = ["I"]  # disable import sorting rules

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

# Custom sections
known_first_party = ["myapp", "mypackage"]
known_third_party = ["requests", "numpy", "pandas"]

# Order of sections
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# Add headings above each group
import_heading_stdlib = "Standard library imports"
import_heading_thirdparty = "Third-party imports"
import_heading_firstparty = "Local application imports"

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
